<resources>
    <string name="app_name">Kotlin Demo App</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_main_settings">Settings</string>
    <string name="tab_title_main_1">Cards</string>
    <string name="tab_title_main_2">Dialogs</string>
    <string name="tab_title_main_3">Widgets</string>
    <string name="main_snack_bar">This is a snack bar</string>
    <string name="main_snack_bar_action">Okay</string>

    <string name="main_card_title">Title goes here</string>
    <string name="main_card_title_short">Title</string>
    <string name="main_card_subtitle">Subtitle here</string>
    <string name="main_card_details">Details here</string>
    <string name="main_card_button_1">ACTION 1</string>
    <string name="main_card_button_2">ACTION 2</string>
    <string name="main_flat_button_1_clicked">Flat Button 1</string>
    <string name="main_flat_button_2_clicked">Flat Button 2</string>

    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_neutral">Neutral</string>
    <string name="dialog_close">Close</string>
    <string name="main_dialog_simple">Simple dialog</string>
    <string name="main_dialog_simple_title">A simple dialog</string>
    <string name="main_dialog_simple_message">
        "A material metaphor is the unifying theory of a rationalized space and a system of motion. "
        "\nThe material is grounded in tactile reality, inspired by the study of paper and ink, yet technologically advanced and open to imagination and magic."</string>
    <string name="main_dialog_single_choice">Single choice dialog</string>
    <string name="main_dialog_multi_choice">Multi choice dialog</string>
    <string name="main_dialog_progress_title">Progress dialog...</string>
    <string name="main_dialog_progress">Progress dialog</string>
    <string name="main_dialog_data_picker">Date Picker Dialog</string>
    <string name="main_dialog_data_time">Time Picker Dialog</string>
    <string name="main_dialog_bottom">Bottom Dialog</string>
    <string name="main_dialog_fullscreen">Fullscreen Dialog</string>
    <string name="main_popup_menu">Popup Menu</string>

    <string name="main_widget_material_button">Material Buttons</string>
    <string name="main_widget_toggle_button">Toggle Button</string>
    <string name="main_widget_switch">Switch</string>
    <string name="main_widget_check_box">Check Box</string>
    <string name="main_widget_check_box_1">CheckBox 1</string>
    <string name="main_widget_check_box_2">CheckBox 2</string>
    <string name="main_widget_check_box_3">CheckBox 3</string>
    <string name="main_widget_radio">Radio Group and Radio Buttons</string>
    <string name="main_widget_radio_button_1">RadioButton 1</string>
    <string name="main_widget_radio_button_2">RadioButton 2</string>
    <string name="main_widget_radio_button_3">RadioButton 3</string>
    <string name="main_widget_seek_bar">Seek Bar</string>
    <string name="main_widget_progress_bar">Progress Bar</string>
    <string name="main_widget_extract_edit_text">Extract Edit Text</string>
    <string name="main_widget_text_input_layout">Text Input Layout</string>
    <string name="main_widget_edit_text">edit text</string>
    <string name="main_widget_spinner">Spinner</string>
    <string name="main_widget_data_picker">Date Picker</string>
    <string name="main_widget_time_picker">Time Picker</string>
    <string name="main_widget_chip">Chips</string>

    <string name="nav_header_text">Click to start login activity</string>
    <string name="nav_recycler_view">Recycler View</string>
    <string name="nav_scrolling">Scrolling</string>
    <string name="nav_fullscreen">Fullscreen</string>
    <string name="nav_bottom_navigation">Bottom Navigation</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_bottom_appbar">Bottom App Bar</string>
    <string name="nav_about">About</string>
    <string name="nav_donate">Donations</string>
    <string name="main_feedback_email">Feedback:MaterialDesign</string>
    <string name="main_not_found_email">Not found email app</string>
    <string name="nav_my_apps">My Apps</string>
    <string name="bottom_navigation">Bottom Navigation</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chats">Chat Fragment</string>
    <string name="tab_layout">Tab Layout</string>
    <string name="navigation_drawer_both_side">Navigation Drawer(Both Side)</string>
    <string name="webview">Webview</string>
    <string name="autocomplete_edittext">AutoComplete Edittext</string>
    <string name="spinner">Spinner</string>
    <string name="basic_searchview">Basic SearchView</string>
    <string name="toolbar_searchview">Toolbar SearchView</string>
    <string name="scrollviews_horizontal_nested">ScrollViews (Horizontal,Nested)</string>


    <string name="dummy_paragraph">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis facilisis, velit eget dapibus malesuada, massa eros condimentum mi, in pulvinar dui sapien at mi. Aenean porttitor vitae elit vitae sagittis. Nullam porta mauris eget libero ornare maximus. Curabitur vehicula quam vel pulvinar efficitur. Donec ultricies sapien vitae auctor congue. Suspendisse posuere malesuada augue nec sodales. Etiam ut erat massa. Integer gravida justo eu elit ornare ultrices. Curabitur augue dui, dapibus vel luctus eu, pellentesque quis erat. Suspendisse elementum justo vitae ante dapibus, et dignissim metus iaculis. Nam nec condimentum dolor, sodales scelerisque lacus. Suspendisse placerat facilisis felis id rutrum. Praesent posuere nulla id tellus tristique rutrum.\n\nDonec vitae sem malesuada, mollis velit et, faucibus erat. Suspendisse et rhoncus velit, non vestibulum erat. Maecenas a posuere diam. Curabitur cursus pharetra lacus, et euismod nisi pellentesque eu. Maecenas finibus dui scelerisque ipsum lacinia viverra. Donec eros risus, placerat id leo eget, sodales congue augue. Nullam tincidunt neque eu tellus varius facilisis. Proin sit amet mi eu sem scelerisque euismod eget sed lectus. Duis sed ante a magna tempor luctus eget in ex. Maecenas ligula arcu, tincidunt eu iaculis vitae, euismod vitae ex. Sed mollis pretium turpis, eu hendrerit eros interdum et. Pellentesque fermentum magna nec tellus ullamcorper dapibus. Fusce et vulputate tellus.\n\nDonec sem lorem, mollis tincidunt interdum non, convallis eget lacus. In imperdiet diam condimentum ex mattis efficitur. In in tellus vitae urna ultrices molestie. Fusce ac elementum ante. Sed porttitor rutrum interdum. Etiam tellus diam, hendrerit ut tellus quis, malesuada consectetur felis. Aliquam fermentum sapien ipsum, id hendrerit lorem rhoncus vitae. In hac habitasse platea dictumst.
    </string>
    <string name="dummy_text1">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris consectetur ligula et eros pulvinar viverra. Morbi eu orci nulla. Duis porttitor mauris quis diam imperdiet, a porta diam sagittis. Suspendisse rutrum accumsan lectus et vestibulum. Donec vel est erat. Donec id sollicitudin quam, ut sollicitudin velit. Nulla at libero vitae urna fringilla porttitor sit amet vitae ligula. Duis ac mattis purus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Morbi congue, nisl eget tincidunt commodo, purus lacus dignissim massa, eu maximus ex ex sed lectus. Mauris dapibus enim ac ex tempor lobortis. Pellentesque at dolor nec dolor bibendum consectetur non ut libero.
    </string>
    <string name="dummy_text_title">
        Lorem ipsum dolor sit amet.
    </string>

    <string name="dummy_medium_text">
        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
    </string>

    <string name="dummy_small_text">
        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
    </string>
    <string name="alert_dialog">Alert Dialog</string>
    <string name="datetime_picker">DateTime Picker</string>
    <string name="adview_interstitial_ad_key">"ca-app-pub-3940256099942544/1033173712 "</string>
    <string name="dont_have_account">Dont\'t have an account ?</string>
    <string name="title_activity_register">Register</string>
    <string name="cb_no_internet_error">something wents wrong</string>


</resources>