<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

        </com.google.android.material.appbar.AppBarLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/activity_vertical_margin">

            <Button
                android:id="@+id/btn_dialog_21"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/btn_margin"
                android:backgroundTint="#FF9800"
                android:padding="@dimen/btn_padding"
                android:text="HomePage
                (Login,Register,Verification,MainScreen)"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btn_dialog_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#F44336"
                android:padding="@dimen/btn_padding"
                android:text="@string/bottom_navigation"
                android:textColor="@color/white"
                android:textSize="14sp" />
            <Button
                android:id="@+id/btn_dialog_24"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorPrimaryDark"
                android:padding="@dimen/btn_padding"
                android:text="Pop Menu"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btn_dialog_17"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/btn_margin"
                android:backgroundTint="#3F51B5"
                android:padding="@dimen/btn_padding"
                android:text="Bottom Navigation Hide On Scroll"
                android:textColor="@color/white"
                android:textSize="12sp" />

            <Button
                android:id="@+id/btn_dialog_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/btn_margin"
                android:backgroundTint="#E91E63"
                android:padding="@dimen/btn_padding"
                android:text="@string/tab_layout"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btn_dialog_11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/btn_margin"
                android:backgroundTint="#FF5722"
                android:padding="@dimen/btn_padding"
                android:text="RecyclerViews"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btn_dialog_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/btn_margin"
                android:backgroundTint="#9C27B0"
                android:padding="@dimen/btn_padding"
                android:text="Grid RecyclerView (2 Columns)"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btn_dialog_25"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/btn_margin"
                android:backgroundTint="#9C27B0"
                android:padding="@dimen/btn_padding"
                android:text="Grid RecyclerView (3 Columns)"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btn_dialog_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/btn_margin"
                android:backgroundTint="#3F51B5"
                android:padding="@dimen/btn_padding"
                android:text="@string/navigation_drawer_both_side"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btn_dialog_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/btn_margin"
                android:backgroundTint="#2196F3"
                android:padding="@dimen/btn_padding"
                android:text="@string/webview"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btn_dialog_6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/btn_margin"
                android:backgroundTint="#009688"
                android:padding="@dimen/btn_padding"
                android:text="@string/autocomplete_edittext"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btn_dialog_7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/btn_margin"
                android:backgroundTint="#4CAF50"
                android:padding="@dimen/btn_padding"
                android:text="@string/spinner"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btn_dialog_8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/btn_margin"
                android:backgroundTint="#FF9800"
                android:padding="@dimen/btn_padding"
                android:text="SearchView"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btn_dialog_9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/btn_margin"
                android:backgroundTint="#FF5722"
                android:padding="@dimen/btn_padding"
                android:text="Calculator App"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btn_dialog_10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/btn_margin"
                android:backgroundTint="#795548"
                android:padding="@dimen/btn_padding"
                android:text="@string/scrollviews_horizontal_nested"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btn_dialog_12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/btn_margin"
                android:backgroundTint="#607D8B"
                android:padding="@dimen/btn_padding"
                android:text="Rating"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <!-- /////////////////////////////////////////////////////Section Two////////////////////////////-->
            <Button
                android:id="@+id/btn_dialog_13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#F44336"
                android:padding="@dimen/btn_padding"
                android:text="@string/alert_dialog"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btn_dialog_14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/btn_margin"
                android:backgroundTint="#E91E63"
                android:padding="@dimen/btn_padding"
                android:text="@string/datetime_picker"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btn_dialog_15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/btn_margin"
                android:backgroundTint="#FF5722"
                android:padding="@dimen/btn_padding"
                android:text="Expandable card"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btn_dialog_16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/btn_margin"
                android:backgroundTint="#9C27B0"
                android:padding="@dimen/btn_padding"
                android:text="Full Screen Ad(Collapse Toolbar)"
                android:textColor="@color/white"
                android:textSize="14sp" />


            <Button
                android:id="@+id/btn_dialog_18"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/btn_margin"
                android:backgroundTint="#2196F3"
                android:padding="@dimen/btn_padding"
                android:text="Fab with Menu Text"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btn_dialog_19"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/btn_margin"
                android:backgroundTint="#009688"
                android:padding="@dimen/btn_padding"
                android:text="Music Player"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btn_dialog_20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/btn_margin"
                android:backgroundTint="#4CAF50"
                android:padding="@dimen/btn_padding"
                android:text="Video Player"
                android:textColor="@color/white"
                android:textSize="14sp" />


            <Button
                android:id="@+id/btn_dialog_22"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/btn_margin"
                android:backgroundTint="#FF5722"
                android:padding="@dimen/btn_padding"
                android:text="Volley Call"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btn_dialog_23"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/btn_margin"
                android:backgroundTint="#795548"
                android:padding="@dimen/btn_padding"
                android:text="Login &amp; Register  with VOlley"
                android:textColor="@color/white"
                android:textSize="14sp" />


        </LinearLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>